# libsie-z

./: .gitignore  HISTORY.md  LICENSE  README.md  README_ZIG.md  audit.md  build.zig  build.zig.zon  test-coverage.md  zig-differences.md
docs/: API_REFERENCE.md  CORE_SCHEMA.md  SIE_FORMAT.md  SOMAT_SCHEMA.md  apilist.md  zig-details.md
examples/: sie_dump.zig  sie_export.zig
include/: sie.h
jll-build/: Manifest.toml  Project.toml  build_tarballs.jl  jll-info.md
libsie-c/: BUILD_STATUS.txt  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  root.lib
libsie-c/contrib/misc/: file-stream-test.c  sie-attach.c  stream-test.c  test-splitter.c  writer.c
libsie-c/contrib/perl_xs/: .gitignore  Changes  MANIFEST  Makefile.PL  README  SIE.pm  SIE.xs  ppport.h  sietest.pl  typemap
libsie-c/contrib/perl_xs/t/: 1.t
libsie-c/docs/: example.sie
libsie-c/docs/reference/: Makefile  h2mdwn.pl
libsie-c/docs/standard/: Makefile  common.tex  core-schema.tex  sie-format.tex  somat-schema.tex
libsie-c/include/: sie.h.in  sie_apr.h  sie_block.h  sie_byteswap.h  sie_channel.h  sie_combiner.h  sie_compiler.h  sie_config.h  sie_context.h  sie_debug.h  sie_decoder.h  sie_dimension.h  sie_exception.h  sie_file.h  sie_group.h  sie_histogram.h  sie_id_map.h  sie_intake.h  sie_internal.h  sie_iterator.h  sie_literals.h  sie_object.h  sie_order.h  sie_output.h  sie_parser.h  sie_plot_crusher.h  sie_recover.h  sie_ref.h  sie_relation.h  sie_sie_vec.h  sie_sifter.h  sie_spigot.h  sie_stream.h  sie_stringtable.h  sie_strtod.h  sie_tag.h  sie_test.h  sie_transform.h  sie_types.h  sie_utils.h  (+4 more)
libsie-c/libsie/: Makefile.am  block.c  channel.c  combiner.c  compiler.c  context.c  debug.c  decoder.c  dimension.c  exception.c  file.c  group.c  histogram.c  id_map.c  intake.c  iterator.c  object.c  output.c  parser.c  plot_crusher.c  recover.c  ref.c  relation.c  sie_apr.c  sie_vec.c  sifter.c  spigot.c  stdcall.c  stream.c  stringtable.c  strtod.c  tag.c  test.c  transform.c  utils.c  vec.c  writer.c  xml.c  xml_merge.c
libsie-c/libsie-demo/: Makefile.am  libsie-demo.c
libsie-c/t/: Makefile.am  frob-file.c  my-check.h  simple-check.c  simple-check.h  t_api.c  t_decoder.c  t_exception.c  t_file.c  t_functional.c  t_histogram.c  t_id_map.c  t_object.c  t_output.c  t_progress.c  t_regression.c  t_relation.c  t_sifter.c  t_spigot.c  t_stringtable.c  t_xml.c  t_xml_merge.c  test-runner.c  test-suites.h  test-utils.c  test-utils.h
libsie-c/t/data/: sie_comprehensive2_VBM_20050908.xml  sie_comprehensive_VBM_DE81A7BA.xml  sie_float_conversions_20050908.sie
libsie-c/t/data/decoders/: big-expr-1  bit-decoder-1  bit-decoder-2  fibonacci  old-message  read-assert  read-no-var  simple  th16-big  th16-little
libsie-c/t/data/sie_comprehensive2_VBM_20050908/: msglog@sim_message.RN_1  tal1d_ed@Minus16.RN_1  tal1d_ed@Sine_5Hz.RN_1  tal1d_ed@Tri_10Hz.RN_1  tal1d_udb@Sine_5Hz.RN_1  tal1d_udb@Tri_10Hz.RN_1  tal2d_ed.RN_1  timhis@Float32.RN_1  timhis@Minus16.RN_1  timhis@Minus32.RN_1  timhis@Minus8.RN_1  timhis@Plus16.RN_1  timhis@Plus32.RN_1  timhis@Plus8.RN_1  timhis@Sine_5Hz.RN_1  timhis@Temp_C.RN_1  timhis@Temp_F.RN_1  timhis@Tri_10Hz.RN_1  timhis_16@Sine_5Hz.RN_1  timhis_16@Temp_C.RN_1  timhis_16@Temp_F.RN_1  timhis_8@Sine_5Hz.RN_1  timhis_8@Temp_C.RN_1  timhis_8@Temp_F.RN_1
libsie-c/t/data/sie_comprehensive_VBM_DE81A7BA/: msglog_sim_message.RN_1  msglog_sim_message.RN_2  tal1d_ed_Minus16.RN_1  tal1d_ed_Minus16.RN_2  tal1d_ed_Sine_5Hz.RN_1  tal1d_ed_Sine_5Hz.RN_2  tal1d_ed_Tri_10Hz.RN_1  tal1d_ed_Tri_10Hz.RN_2  tal1d_udb_Sine_5Hz.RN_1  tal1d_udb_Sine_5Hz.RN_2  tal1d_udb_Tri_10Hz.RN_1  tal1d_udb_Tri_10Hz.RN_2  timhis_16_Sine_5Hz.RN_1  timhis_16_Sine_5Hz.RN_2  timhis_16_Temp_C.RN_1  timhis_16_Temp_C.RN_2  timhis_16_Temp_F.RN_1  timhis_16_Temp_F.RN_2  timhis_8_Sine_5Hz.RN_1  timhis_8_Sine_5Hz.RN_2  timhis_8_Temp_C.RN_1  timhis_8_Temp_C.RN_2  timhis_8_Temp_F.RN_1  timhis_8_Temp_F.RN_2  timhis_Float32.RN_1  timhis_Float32.RN_2  timhis_Minus16.RN_1  timhis_Minus16.RN_2  timhis_Minus32.RN_1  timhis_Minus32.RN_2  timhis_Minus8.RN_1  timhis_Minus8.RN_2  timhis_Plus16.RN_1  timhis_Plus16.RN_2  timhis_Plus32.RN_1  timhis_Plus32.RN_2  timhis_Plus8.RN_1  timhis_Plus8.RN_2  timhis_Sine_5Hz.RN_1  timhis_Sine_5Hz.RN_2  (+6 more)
libsie-c/t/data/sie_float_conversions_20050908/: timhis@Sine_Clip.RN_1  timhis@Sine_halfHz.RN_1  timhis@Square_1Hz.RN_1  timhis@Tri_1Hz.RN_1  timhis@Tri_Bug.RN_1  timhis@Tri_Clip_1Hz.RN_1  timhis@run_stopper.RN_1  timhis@stop_trigger.RN_1  timhis_16@Sine_Clip.RN_1  timhis_16@Sine_halfHz.RN_1  timhis_16@Square_1Hz.RN_1  timhis_16@Tri_1Hz.RN_1  timhis_16@Tri_Bug.RN_1  timhis_16@Tri_Clip_1Hz.RN_1  timhis_16@run_stopper.RN_1  timhis_16@stop_trigger.RN_1  timhis_8@Sine_Clip.RN_1  timhis_8@Sine_halfHz.RN_1  timhis_8@Square_1Hz.RN_1  timhis_8@Tri_1Hz.RN_1  timhis_8@Tri_Bug.RN_1  timhis_8@Tri_Clip_1Hz.RN_1  timhis_8@run_stopper.RN_1  timhis_8@stop_trigger.RN_1
libsie-c/t/data/sie_min_timhis_a_19EFAA61/: timhis@Tri_10Hz.RN_1  timhis@Tri_10Hz.RN_2
libsie-c/testrig/: Makefile.am  testrig.c
src/: block.zig  byteswap.zig  c_api.zig  channel.zig  channel_spigot.zig  combiner.zig  compiler.zig  config.zig  context.zig  decoder.zig  dimension.zig  error.zig  file.zig  file_stream.zig  group.zig  group_spigot.zig  histogram.zig  intake.zig  iterator.zig  object.zig  output.zig  parser.zig  plot_crusher.zig  recover.zig  ref.zig  relation.zig  root.zig  sie_file.zig  sifter.zig  spigot.zig  stream.zig  stringtable.zig  tag.zig  test.zig  transform.zig  types.zig  uthash.zig  utils.zig  vec.zig  writer.zig  (+2 more)
test/: api_test.zig  context_test.zig  decoder_test.zig  file_highlevel_test.zig  file_stream_test.zig  file_test.zig  functional_dump_test.zig  functional_test.zig  histogram_test.zig  id_map_test.zig  object_test.zig  output_test.zig  regression_test.zig  relation_test.zig  sifter_test.zig  spigot_data_test.zig  spigot_test.zig  stringtable_test.zig  xml_merge_test.zig  xml_test.zig
test/data/: can_raw_test-v-1-5-0-129-build-1218.sie  sie_comprehensive2_VBM_20050908.sie  sie_seek_test.sie  (+5 more)
(+99 files in other folders)
